# yet-another-google-mcp

./: .env.example  .gitignore  LEARN.md  LICENSE  README.md  config.example.yaml  pyproject.toml  requirements.txt  server.py
docs/: AUTH_SETUP.md  IDE_SETUP.md  RELEASE_v1.0.0.md  SECURITY.md  TOOLS_REFERENCE.md
docs/ru/: AUTH_SETUP.md  IDE_SETUP.md  SECURITY.md  TOOLS_REFERENCE.md
mcp_google/: __init__.py  auth.py  config.py  logging.py  operations.py  security.py  server.py
mcp_google/handlers/: __init__.py  apps_script.py  calendar.py  docs.py  drive.py  gmail.py  sheets.py
